# todo

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
config/: settings.py
todo/: admin.py  models.py  serializers.py
todo/migrations/: 0001_initial.py
